--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Rename the terminal
 set -g set-titles on
-set -g set-titles-string '#(whoami)::#h'
+set -g set-titles-string '#(pwd)::#h'
 
 # use C-a, since it's on the home row and easier to hit than C-b
 set-option -g prefix C-a
@@ -26,6 +26,23 @@ bind-key C-o rotate-window
 
 
 # mouse behavior
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+bind m \
+    set -g mode-mouse on \;\
+    set -g mouse-resize-pane on \;\
+    set -g mouse-select-pane on \;\
+    set -g mouse-select-window on \;\
+    display 'Mouse: ON'
+
+bind M \
+    set -g mode-mouse off \;\
+    set -g mouse-resize-pane off \;\
+    set -g mouse-select-pane off \;\
+    set -g mouse-select-window off \;\
+    display 'Mouse: OFF'
+
+# setw -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+
+# clipboard
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
