--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,4 +47,5 @@ bind M \
 # clipboard
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
-# source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
+run-shell "powerline-daemon -q"
+source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
