--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Rename the terminal
 set -g set-titles on
-set -g set-titles-string '#(pwd)::#h'
+set -g set-titles-string '#{pane_current_path} -- #h'
+# set -g set-titles-string '#(pwd)::#h'
 
 # use C-a, since it's on the home row and easier to hit than C-b
 set-option -g prefix C-a
@@ -46,3 +47,41 @@ bind M \
 
 # clipboard
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+
+# # Status Bar
+# set-window-option -g status-left " #S "
+# set-window-option -g status-left-fg black
+# set-window-option -g status-left-bg white
+ 
+# set-window-option -g status-right "%H:%M %d-%b-%y "
+# set-window-option -g status-right-fg black
+# # set-window-option -g status-right-bg white
+  
+# set-window-option -g window-status-format " #I: #W "
+   
+# set-window-option -g window-status-current-format " #I: #W "
+# set-window-option -g window-status-current-fg green
+# set-window-option -g window-status-current-bg black
+
+
+source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf"
+
+if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
+set -g status on
+set -g status-utf8 on
+set -g status-interval 2
+set -g status-fg colour250
+set -g status-bg colour238
+set -g status-left-length 20
+set -g status-left '#[fg=colour8,bg=colour3,bold] #S #[fg=colour3,bg=colour238,nobold]'#(eval $POWERLINE_COMMAND tmux left)'
+set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
+set -g status-right-length 150
+set -g window-status-format "#[fg=colour7,bg=colour238]#I #[fg=colour240 bgcolor=4] #W"
+set -g window-status-current-format "#[fg=colour238,bg=colour4]#[fg=colour15,bg=colour4] #I  #[fg=colour15,bold]#W #[fg=colour4,bg=colour238,nobold]"
+set-window-option -g window-status-fg colour249
+set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-bell-attr none
+set-window-option -g window-status-activity-fg yellow
+set-window-option -g window-status-bell-fg red
+# vim: ft=tmux
