--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,3 +88,13 @@ set-window-option -g window-status-bell-fg red
 #if-shell "uname | grep -q Darwin"
 #run-shell "powerline-daemon -q"
 #source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
