--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,30 +64,27 @@ bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 # set-window-option -g window-status-current-bg black
 
 
-source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
+# source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
 
-if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
-set -g status on
-set -g status-utf8 on
-set -g status-interval 2
-set -g status-fg colour250
-set -g status-bg colour238
-set -g status-left-length 20
-set -g status-left '#[fg=colour8,bg=colour3,bold] #S #[fg=colour3,bg=colour238,nobold]'#(eval $POWERLINE_COMMAND tmux left)'
-set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
-set -g status-right-length 150
-set -g window-status-format "#[fg=colour7,bg=colour238]#I #[fg=colour240 bgcolor=4] #W"
-set -g window-status-current-format "#[fg=colour238,bg=colour4]#[fg=colour15,bg=colour4] #I  #[fg=colour15,bold]#W #[fg=colour4,bg=colour238,nobold]"
-set-window-option -g window-status-fg colour249
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-bell-attr none
-set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-bell-fg red
+# if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
+# set -g status on
+# set -g status-utf8 on
+# set -g status-interval 2
+# set -g status-fg colour250
+# set -g status-bg colour238
+# set -g status-left-length 20
+# set -g status-left '#[fg=colour8,bg=colour3,bold] #S #[fg=colour3,bg=colour238,nobold]'#(eval $POWERLINE_COMMAND tmux left)'
+# set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
+# set -g status-right-length 150
+# set -g window-status-format "#[fg=colour7,bg=colour238]#I #[fg=colour240 bgcolor=4] #W"
+# set -g window-status-current-format "#[fg=colour238,bg=colour4]#[fg=colour15,bg=colour4] #I  #[fg=colour15,bold]#W #[fg=colour4,bg=colour238,nobold]"
+# set-window-option -g window-status-fg colour249
+# set-window-option -g window-status-activity-attr none
+# set-window-option -g window-status-bell-attr none
+# set-window-option -g window-status-activity-fg yellow
+# set-window-option -g window-status-bell-fg red
 # vim: ft=tmux
 
-#if-shell "uname | grep -q Darwin"
-#run-shell "powerline-daemon -q"
-#source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -98,3 +95,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+
+if-shell "uname | grep -q Darwin" "source-file .tmux-osx.conf" "source-file .tmux-linux.conf"
+# run-shell "powerline-daemon -q"
+# source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
