Updated for back to Shanghai.
Added i3 config

Change-Id: Iecb03fb45886f157f85802af9e150ce6fe597029

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,8 +16,8 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 setw -g mode-keys vi
 
 # use vim-like keys for splits and windows
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key s split-window -v -c '#{pane_current_path}'
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
@@ -97,6 +97,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 run '~/.tmux/plugins/tpm/tpm'
 
 
-if-shell "uname | grep -q Darwin" "source-file .tmux-osx.conf" "source-file .tmux-linux.conf"
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux-osx.conf" "source-file ~/.tmux-linux.conf"
 # run-shell "powerline-daemon -q"
 # source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
