--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -11,9 +11,16 @@ general {
         interval = 5
 }
 
+# order += "ethernet eth0"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "tztime local"
+
+ethernet eth0 {
+# if you use %speed, i3status requires the cap_net_admin capability
+     format_up = "E: %ip (%speed)"
+     format_down = "E: down"
+}
 
 cpu_temperature 0 {
      format = " T: %degrees °C "
