--- a/i3/config
+++ b/i3/config
@@ -89,11 +89,11 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
+bindsym $mod+1 workspace number 1 shell
+bindsym $mod+2 workspace number 2 editor
+bindsym $mod+3 workspace number 3 chrome
+bindsym $mod+4 workspace number 4 debug
+bindsym $mod+5 workspace number 5 log
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
@@ -101,11 +101,11 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+1 move container to workspace number 1 shell
+bindsym $mod+Shift+2 move container to workspace number 2 editor
+bindsym $mod+Shift+3 move container to workspace number 3 chrome
+bindsym $mod+Shift+4 move container to workspace number 4 debug
+bindsym $mod+Shift+5 move container to workspace number 5 log
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
@@ -193,8 +193,9 @@ bar {
 for_window [class="isim_system"] floating enable
 for_window [class="XTerm"] floating enable
 for_window [class="FVP*"] floating enable
+for_window [class="SDL2*"] floating enable
 
 bindsym Mod1+l exec sh ~/.i3/i3lock.sh
 # bindsym Control+$mod+l exec sh ~/.i3/i3lock.sh
-exec xautolock -time 10 -locker '~/.i3/i3lock.sh' &
+# exec xautolock -time 10 -locker '~/.i3/i3lock.sh' &
 exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg
