--- a/starship.toml
+++ b/starship.toml
@@ -33,15 +33,15 @@ format = '[\($state( $progress_current of $progress_total)\)]($style) '
 
 [git_status]
 conflicted = "罹"
-ahead = "  ×${count}"
-behind = "寧 ×${count}"
-diverged = "  ×${ahead_count}  ×${behind_count}"
-untracked = "  ×${count}"
-stashed = "  "
-modified = "  ×${count}"
-staged = "  ×${count}"
-renamed = "  ×${count}"
-deleted = "﫧 ×${count}"
+ahead = "×${count} "
+behind = "寧×${count} "
+diverged = "×${ahead_count} ×${behind_count} "
+untracked = "×${count} "
+stashed = ""
+modified = "×${count} "
+staged = "×${count} "
+renamed = "×${count} "
+deleted = "﫧×${count} "
 style = "bright-white"
 format = "$all_status$ahead_behind"
 
@@ -58,10 +58,12 @@ disabled = true
 [python]
 format = "[$symbol$version]($style) "
 style = "bold green"
+disabled = true
 
 [rust]
 format = "[$symbol$version]($style) "
 style = "bold green"
+disabled = true
 
 [time]
 time_format = "%R"
